--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'poppins', sans-serif;
 }
-body{
+
+body {
     color: #ededed;
     background: #081b29;
 }
-.header{
+
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -22,7 +24,8 @@ body{
     align-items: center;
     z-index: 100;
 }
-.logo{
+
+.logo {
     position: relative;
     font-size: 25px;
     color: #fff;
@@ -34,7 +37,8 @@ body{
     opacity: 0;
     animation: slideRight 1s ease forwards;
 }
-.navbar a{
+
+.navbar a {
     display: inline-block;
     font-size: 25px;
     color: #fff;
@@ -46,15 +50,17 @@ body{
     animation: slideTop .5s ease forwards;
     animation-delay: calc(.2s * var(--i));
 }
-.navbar a:hover{
+
+.navbar a:hover {
     color: #0ef;
 }
-.home{
+
+.home {
     position: relative;
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background:url(./images/Home.png) no-repeat;
+    background: url(./images/home.jpg) no-repeat;
     /* background:  #008080; */
     background-size: cover;
     background-position: center;
@@ -62,25 +68,30 @@ body{
     align-items: center;
     padding: 70px 10% 0;
 }
-.home-content{
+
+.home-content {
     max-width: 600px;
 }
-.home-content h3{
+
+.home-content h3 {
     font-size: 32px;
     font-weight: 700;
     opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: .7s;
 }
-.home-content h3:nth-last-of-type(2){
+
+.home-content h3:nth-last-of-type(2) {
     margin-bottom: 30px;
     animation: slideTop 1s ease forwards;
     animation-delay: .7s;
 }
-.home-content h3 span{
-    color:#0ef;
+
+.home-content h3 span {
+    color: #0ef;
 }
-.home-content h1{
+
+.home-content h1 {
     font-size: 56px;
     font-weight: 700;
     margin: -3px 0;
@@ -88,13 +99,15 @@ body{
     animation: slideRight 1s ease forwards;
     animation-delay: 1s;
 }
-.home-content p{
+
+.home-content p {
     font-size: 20px;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
 }
-.home-scl a{
+
+.home-scl a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -114,12 +127,14 @@ body{
     /* box-shadow: 0 0 5px #0ef,
     0 0 25px #0ef; */
 }
-.home-sci a:hover{
+
+.home-sci a:hover {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
 }
-.btn-box{
+
+.btn-box {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -133,70 +148,82 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
-}
-.btn-box:hover{
-    box-shadow: 0 0 5px cyan,
-    0 0 25px cyan, 0 0 50px cyan,
-    0 0 100px cyan, 0 0 200px cyan,;
+        0 0 25px #0ef;
 }
 
-.about{
+.btn-box:hover {
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan, ;
+}
+
+.about {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
 }
-.about-img img{
+
+.about-img img {
     padding-bottom: 20%;
     max-width: 630px;
     height: auto;
     width: 100%;
     border-radius: 8px;
 }
-.about-text h2{
+
+.about-text h2 {
     font-size: 60px;
 }
-.about-text h2 span{
+
+.about-text h2 span {
     color: #0ef;
 }
-.about-text h4{
+
+.about-text h4 {
     font-size: 29px;
     font-weight: 600;
     color: #fff;
     line-height: 1.4;
     margin: 15px 0 30px;
 }
-.about-text p{
+
+.about-text p {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem
 }
-#services{
+
+#services {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
-.sub-title{
+
+.sub-title {
     text-align: center;
     font-size: 60px;
     padding-bottom: 70px;
 }
-.sub-title span{
+
+.sub-title span {
     color: #0ef;
 }
-.container{
+
+.container {
     padding: 90px;
 }
-.services-list{
+
+.services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+
+.services-list div {
     background-color: transparent;
     padding: 40px;
     font-size: 13px;
@@ -205,25 +232,29 @@ body{
     border-radius: 20px;
     transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
-                1px 1px 40px #0053b8f7;
+        1px 1px 40px #0053b8f7;
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div h2{
+
+.services-list div h2 {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.services-list div a{
+
+.services-list div a {
     text-decoration: none;
     color: #000000;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
-.read{
+
+.read {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -237,94 +268,118 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
+        0 0 25px #0ef;
 }
-.read:hover{
+
+.read:hover {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     transform: translateY(-10px);
 }
-/* section{
+
+section {
     display: flex;
     flex-wrap: wrap;
-} */
-.container1{
-    width: 600px;
+}
+
+.container1 {
+    width: 700px;
     height: 500px;
-    padding: 75px 90px;
+    padding: 75px 75px;
     margin-left: 120px;
 }
-.heading1{
+.remo{
+    width: 45%;
+    float: left;
+}
+
+.heading1 {
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
     margin-bottom: 50px;
 }
-.bar{
+
+.bar {
     font-size: 23px;
 }
-.Technical-bars .bar{
+
+.Technical-bars .bar {
     margin-top: 40px 0;
 }
-.Technical-bars .bar:first-child{
+
+.Technical-bars .bar:first-child {
     margin-top: 0;
 }
-.Technical-bars .bar:last-child{
+
+.Technical-bars .bar:last-child {
     margin-bottom: 0;
 }
-.Technical-bars .bar .info{
+
+.Technical-bars .bar .info {
     margin-bottom: 5px;
 }
-.Technical-bars .bar .info span{
+
+.Technical-bars .bar .info span {
     font-size: 17px;
     font-weight: 500;
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
-.Technical-bars .bar .progress-line{
+
+.Technical-bars .bar .progress-line {
     position: relative;
     border-radius: 10px;
     width: 100%;
     height: 5px;
     background-color: #000000;
-    animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
-@keyframes animate{
-    100%{
+
+@keyframes animate {
+    100% {
         transform: scaleX(1);
     }
 }
-.Technical-bars .bar .progress-line span{
+
+.Technical-bars .bar .progress-line span {
     height: 100%;
     background-color: #0ef;
     position: absolute;
     border-radius: 10px;
-    animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
+    animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
-.progress-line.html span{
+
+.progress-line.html span {
     width: 90%;
 }
-.progress-line.css span{
+
+.progress-line.css span {
     width: 80%;
 }
-.progress-line.javaScript span{
+
+.progress-line.javaScript span {
     width: 70%;
 }
-.progress-line.java span{
+
+.progress-line.java span {
     width: 65%;
 }
-.progress-line.react span{
+
+.progress-line.react span {
     width: 50%;
 }
-.progress-line span::after{
+
+.progress-line span::after {
     position: absolute;
     padding: 1px 8px;
     background-color: #000;
@@ -336,22 +391,28 @@ body{
     animation: showText 0.5s 1.5s linear forwards;
     opacity: 0;
 }
-.progress-line.html span::after{
+
+.progress-line.html span::after {
     content: "90%";
 }
-.progress-line.css span::after{
+
+.progress-line.css span::after {
     content: "80%";
 }
-.progress-line.javaScript span::after{
+
+.progress-line.javaScript span::after {
     content: "70%";
 }
-.progress-line.java span::after{
+
+.progress-line.java span::after {
     content: "65%";
 }
-.progress-line.react span::after{
+
+.progress-line.react span::after {
     content: "50%";
 }
-.progress-line span::before{
+
+.progress-line span::before {
     content: "";
     position: absolute;
     width: 0;
@@ -365,25 +426,29 @@ body{
     animation: showText 0.5s 1.5s linear forwards;
     opacity: 0;
 }
-@keyframes showText{
-    100%{
+
+@keyframes showText {
+    100% {
         opacity: 1;
     }
 }
-.radial-bars{
+
+.radial-bars {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
 }
-.radial-bars .radial-bar{
+
+.radial-bars .radial-bar {
     width: 50%;
     height: 170px;
     margin-bottom: 10px;
     position: relative;
 }
-.radial-bars .radial-bar svg{
+
+.radial-bars .radial-bar svg {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -391,7 +456,8 @@ body{
     width: 120px;
     height: 160px;
 }
-.radial-bars .radial-bar .progress-bar{
+
+.radial-bars .radial-bar .progress-bar {
     stroke-width: 10;
     stroke: black;
     fill: transparent;
@@ -401,46 +467,67 @@ body{
     animation: animate-bar 1s linear forwards;
 }
 
-@keyframes animate-bar{
-    100%{
+@keyframes animate-bar {
+    100% {
         stroke-dashoffset: -1;
     }
 }
-.path{
+
+.path {
     stroke-width: 10;
     stroke: #0ef;
     fill: transparent;
     stroke-dasharray: 502;
     stroke-dashoffset: 502;
     stroke-linecap: round;
-} 
-.path-1{animation: animate-path1 1s 1s linear forwards;}
-.path-2{animation: animate-path2 1s 1s linear forwards;}
-.path-3{animation: animate-path3 1s 1s linear forwards;}
-.path-4{animation: animate-path4 1s 1s linear forwards;}
+}
+
+.path-1 {
+    animation: animate-path1 1s 1s linear forwards;
+}
+
+.path-2 {
+    animation: animate-path2 1s 1s linear forwards;
+}
+
+.path-3 {
+    animation: animate-path3 1s 1s linear forwards;
+}
+
+.path-4 {
+    animation: animate-path4 1s 1s linear forwards;
+}
 
 
-@keyframes animate-path1{
-    100%{
-        stroke-dashoffset: 50;;
+@keyframes animate-path1 {
+    100% {
+        stroke-dashoffset: 50;
+        ;
     }
 }
-@keyframes animate-path2{
-    100%{
-        stroke-dashoffset: 175;;
+
+@keyframes animate-path2 {
+    100% {
+        stroke-dashoffset: 175;
+        ;
     }
 }
-@keyframes animate-path3{
-    100%{
-        stroke-dashoffset: 125;;
+
+@keyframes animate-path3 {
+    100% {
+        stroke-dashoffset: 125;
+        ;
     }
 }
-@keyframes animate-path4{
-    100%{
-        stroke-dashoffset: 75;;
+
+@keyframes animate-path4 {
+    100% {
+        stroke-dashoffset: 75;
+        ;
     }
 }
-.radial-bar .percentage{
+
+.radial-bar .percentage {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -450,7 +537,8 @@ body{
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
-.radial-bar .text{
+
+.radial-bar .text {
     width: 100%;
     position: absolute;
     text-align: center;
@@ -461,27 +549,32 @@ body{
     font-weight: 500;
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
-} 
-.main-text{
+}
+
+.main-text {
     padding-top: 130px;
     margin-top: 200px;
 }
-.main-text h2{
+
+.main-text h2 {
     font-size: 60px;
     line-height: 1;
     text-align: center;
 }
-.main-text h2 span{
+
+.main-text h2 span {
     color: #0ef;
 }
-.portfolio-content{
+
+.portfolio-content {
     display: flex;
     /* justify-content: center;
     align-items: center;
     flex-wrap: wrap; */
-    grid-template-columns: repeat(auto-fit, minmax(359px,auto));
+    grid-template-columns: repeat(auto-fit, minmax(359px, auto));
 }
-.row{
+
+.row {
     flex: 1 1 30rem;
     padding: 3rem 2rem 4rem;
     border-radius: 2rem;
@@ -491,7 +584,8 @@ body{
     cursor: pointer;
     align-items: center;
 }
-.row img{
+
+.row img {
     width: 100%;
     border-radius: 8px;
     display: flex;
@@ -499,10 +593,11 @@ body{
     /* height: 300px; */
 
 }
-.layer{
+
+.layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.1),#0ef);
+    background: linear-gradient(rgba(0, 0, 0, 0.1), #0ef);
     position: absolute;
     border-radius: 8px;
     left: 0;
@@ -516,18 +611,21 @@ body{
     padding: 0 40px;
     transition: height 0.5s;
 }
-.layer h5{
+
+.layer h5 {
     color: #000;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 15px;
 }
-.layer p{
+
+.layer p {
     color: #000;
     font-size: 1rem;
     line-height: 1.8;
 }
-.layer i{
+
+.layer i {
     color: #ff004f;
     margin-top: 20px;
     font-size: 20px;
@@ -539,13 +637,16 @@ body{
     justify-content: center;
     border-radius: 50%;
 }
-.row:hover img{
+
+.row:hover img {
     transform: scale(1.1);
 }
-.row:hover .layer{
+
+.row:hover .layer {
     height: 100%;
 }
-.contact{
+
+.contact {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -553,45 +654,54 @@ body{
     padding-left: 30px;
     margin-top: 130px;
 }
-.contact-text h2{
+
+.contact-text h2 {
     font-size: 90px;
     line-height: 1;
     text-align: center;
 }
-.contact-text h2 span{
+
+.contact-text h2 span {
     color: #0ef;
 }
-.contact-text h4{
+
+.contact-text h4 {
     margin: 15px 0;
     color: rgb(228, 228, 228);
     font-size: 20px;
     font-weight: 600;
 }
-.contact-text p{
+
+.contact-text p {
     color: rgb(177, 177, 177);
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 2rem;
 }
-.contact-list{
+
+.contact-list {
     margin-bottom: 3rem;
 }
-.contact-list li{
+
+.contact-list li {
     margin-bottom: 10px;
     display: block;
 }
-.contact-list i{
+
+.contact-list i {
     display: inline-block;
     color: #0ef;
     font-size: 20px;
     font-weight: 600;
     transition: all .40s ease;
 }
-.contact-list li a:hover{
+
+.contact-list li a:hover {
     transform: scale(1.01) translateY(-5px);
     color: #0ef;
 }
-.contact-icons i{
+
+.contact-icons i {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -609,15 +719,19 @@ body{
     animation: slideLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
 }
-.contact-icons i:hover{
+
+.contact-icons i:hover {
     background: #0ef;
     color: #000;
-    box-shadow: 0  0 20px #0ef;
+    box-shadow: 0 0 20px #0ef;
 }
-.contact-form form{
+
+.contact-form form {
     position: relative;
 }
-.contact-form form input,form textarea{
+
+.contact-form form input,
+form textarea {
     border: none;
     outline: none;
     width: 90%;
@@ -629,11 +743,13 @@ body{
     margin-bottom: 0.5rem;
     border-radius: 0.5rem;
 }
-.contact-form textarea{
+
+.contact-form textarea {
     resize: none;
     height: 220px;
 }
-.contact-form form .send{
+
+.contact-form form .send {
     display: inline-block;
     padding: 14px 60px;
     background: #0ef;
@@ -647,14 +763,16 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-    0 0 25px #0ef;
+        0 0 25px #0ef;
 }
-.contact-form form .send:hover{
+
+.contact-form form .send:hover {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
 }
-.last-text p{
+
+.last-text p {
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -662,12 +780,14 @@ body{
     font-weight: 300;
     margin-top: 70px;
 }
-.top{
+
+.top {
     position: fixed;
     bottom: 2.1rem;
     right: 2.1rem;
 }
-.top i{
+
+.top i {
     color: #000;
     background: #0ef;
     font-size: 20px;
@@ -679,44 +799,48 @@ body{
 
 
 
-@keyframes slideRight{
-    0% { 
+@keyframes slideRight {
+    0% {
         transform: translateX(-100px);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideLeft{
-    0% { 
+@keyframes slideLeft {
+    0% {
         transform: translateX(100px);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideTop{
-    0% { 
+@keyframes slideTop {
+    0% {
         transform: translateY(100px);
         opacity: 0;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
 
-@keyframes slideBottom{
-    0% { 
+@keyframes slideBottom {
+    0% {
         transform: translateY(-100px);
         opacity: 0;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 1;
