--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    position: relative;
     font-family: 'poppins', sans-serif;
 }
 
 body {
     color: #ededed;
     background: #081b29;
+
 }
 
 .header {
@@ -55,12 +59,203 @@ body {
     color: #0ef;
 }
 
+/* .................Ball effect maincontainer................ */
+
+.boll {
+    width: 50%;
+    height: 65%;
+    float: left;
+
+}
+
+.main-container {
+    max-width: 1800px;
+    width: 100%;
+    min-height: 100vh;
+    height: fit-content;
+    padding: 0 10%;
+}
+
+.bottom-right {
+    width: 95%;
+    aspect-ratio: 1/1;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.main-circle {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
+    box-shadow: inset rgba(0, 0, 0, 0.903) 0px 30px 35px -5px, inset rgba(0, 0, 0, 0.831) 0px 12px 20px -8px;
+}
+
+.circle2 {
+    width: 65%;
+    height: 65%;
+    position: absolute;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #0ef,
+        0 0 25px #0ef;
+    /* box-shadow: rgba(0, 0, 0, 0.903) 0px 30px 35px 5px, rgba(0, 0, 0, 0.831) 0px 8px 16px -8px; */
+}
+
+.circle2 img {
+    width: 100%;
+}
+
+.shot-circle,
+.ball-circle {
+    width: 99%;
+    height: 99%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.shot-circle img {
+    width: 55%;
+    position: absolute;
+    bottom: 0;
+    transform: rotate(-0.4deg);
+
+}
+
+.ball {
+    width: 17%;
+    height: 17%;
+    background: #0ef;
+    position: absolute;
+    bottom: 0;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #0ef,
+        0 0 25px #0ef;
+    /* box-shadow: rgba(0, 0, 0, 0.87) 0px 6px 20px -4px inset, rgba(0, 0, 0, 0.87) 0px 6px 12px -6px inset; */
+}
+
+.ball-circle {
+    transform: rotate(41deg);
+    animation: animate1 4s linear infinite;
+
+}
+
+.shot-circle {
+    animation: animate2 4s linear infinite;
+}
+
+@keyframes animate1 {
+    0% {
+        transform: rotate(41deg);
+    }
+
+    8% {
+        transform: rotate(38deg);
+    }
+
+    16% {
+        transform: rotate(41deg);
+    }
+
+    50% {
+        transform: rotate(319deg);
+    }
+
+    58% {
+        transform: rotate(322deg);
+    }
+
+    66% {
+        transform: rotate(319deg);
+    }
+
+    100% {
+        transform: rotate(41deg);
+    }
+}
+
+
+@keyframes animate2 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    8% {
+        transform: rotate(-10deg);
+    }
+
+    16% {
+        transform: rotate(10deg);
+    }
+
+    50% {
+        transform: rotate(0deg);
+    }
+
+    58% {
+        transform: rotate(10deg);
+    }
+
+    66% {
+        transform: rotate(-10deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+/* @keyframes animate11 {
+
+    0%,
+    8%,
+    50%,
+    58%,
+    16%,
+    100% {}
+
+    66% {
+        transform: rotate(-10deg);
+    }
+}
+
+@keyframes animate12 {
+
+    0%,
+    8%,
+    50%,
+    58%,
+    16%,
+    100% {}
+
+    66% {
+        transform: rotate(-10deg);
+    }
+} */
+
+@media(max-width:1000px) {
+    .main-container {
+        padding: 0 5%;
+    }
+
+
+}
+
+
+/* ....................Ball effect End................ */
+
 .home {
     position: relative;
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(./images/home.jpg) no-repeat;
+    /* background: url(./images/home.jpg) no-repeat; */
     /* background:  #008080; */
     background-size: cover;
     background-position: center;
@@ -292,7 +487,8 @@ section {
     padding: 75px 75px;
     margin-left: 120px;
 }
-.remo{
+
+.remo {
     width: 45%;
     float: left;
 }
