--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 .boll {
     width: 40%;
-    height: 55%;
+    height: 65%;
     float: left;
 
 }
@@ -249,6 +249,88 @@ body {
 
 
 /* ....................Ball effect End................ */
+/*----------------------- loop start----------------------------------------- */
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #081b29;
+    /* animation: animatecolor 8s linear infinite;
+ */
+}
+
+@keyframes animatecolor {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+
+    100% {
+        filter: hue-rotate(360deg);
+    }
+}
+
+section .container {
+    display: flex;
+}
+
+section .container .circle {
+    position: relative;
+    width: 250px;
+    height: 100px;
+    margin: 0 -7.5px;
+}
+
+section .container .circle span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotate(calc(18deg * var(--i)));
+    /* 360 / 20 = 18deg */
+}
+
+section .container .circle span::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: calc(50% - 7.5px);
+    width: 15px;
+    height: 15px;
+    background: #0ef;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #0ef,
+        0 0 20px #0ef,
+        0 0 40px #0ef,
+        0 0 60px #0ef,
+        0 0 80px #0ef,
+        0 0 100px #0ef;
+    transform: scale(0.1);
+    animation: animate 4s linear infinite;
+    animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes animate {
+    0% {
+        transform: scale(1);
+    }
+
+    50%,
+    100% {
+        transform: scale(0.1);
+    }
+}
+
+section .container .circle:nth-child(2) {
+    transform: rotate(-180deg);
+}
+
+section .container .circle:nth-child(2) span::before {
+    animation-delay: calc(-0.1s * var(--i));
+}
+
+/* -----------------------loop end-------------------------------------------- */
 
 .home {
     position: relative;
